plugins {
    id 'java'
    id 'application'
    id 'java-library'
}

group 'berker.tcp.balancer'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.0'
}
application {
    mainClass.set("berker.tcp.balancer.Main")
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
    options.compilerArgs += "-Xlint:preview"
    options.release = 19
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}
test {
    useJUnitPlatform()
}

